--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
     "cSpell.ignoreWords": [
         "aboutus",
         "bx",
-        "cand"
+        "cand",
+        "signin",
+        "signup"
     ]
 }
